--- a/client/src/components/Landing/Landing.css
+++ b/client/src/components/Landing/Landing.css
@@ -62,7 +62,7 @@
   width: 100vw;
   height: 100vh;
   /* background: linear-gradient(rgba(150, 177, 245, 0.75), rgba(5, 7, 12, 0.75));*/
-  /* background-image: url('../image/personas1.jpg');*/
+  background-image: url('../images/izqlanding.jpeg');
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
