--- a/client/src/components/Loader/Loader.css
+++ b/client/src/components/Loader/Loader.css
@@ -9,7 +9,7 @@
   }
 
 .button{
-    background-color: #4CAF50; /* Green */
+    background-color: #08074d; 
     border: none;
     color: white;
     padding: 15px 32px;
@@ -17,4 +17,17 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    border-radius: 5px;
+}
+
+.button2{
+  text-decoration: none;
+  color: goldenrod;
+  justify-content: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  cursor: pointer;
+  border-radius: 0.2rem;
+  outline: none;
+  border: none;
 }
