--- a/client/src/components/Searchbar/searchbar.css
+++ b/client/src/components/Searchbar/searchbar.css
@@ -18,15 +18,15 @@
     
     
     .button_search{
-        position: absolute;
+        position: static;
         top: 0;
-        right: 424px;
-        height: 100%;
+        right: 524px;
+        height: 90%;
         outline: goldenrod 2px solid;
-        padding-left: 10px;
+        padding-left: 20px;
         cursor: pointer;
         border: none;
-        font-size: 15px;
+        font-size: 25px;
         border-radius: 0.5rem;
         background-image: linear-gradient(45deg,goldenrod, black);
         color: white;
