--- a/client/src/components/VideogameCreate/VideogameCreate2.css
+++ b/client/src/components/VideogameCreate/VideogameCreate2.css
@@ -1,5 +1,5 @@
 .containerForm {
-    background-image: url('../images/harry-potter-following-the-darkness-4k-tp.jpg');
+    background-image: url('../images/dragon-warrior-fantasy-digital-art-4k-ql.jpg');
     background-size: cover;
     background-attachment: fixed;
     min-height: 100vh;
@@ -116,7 +116,7 @@ textarea {
     padding: 5px;
     border-radius: 6px;
     border: 2px solid gray;
-    background-image: url(https://img.freepik.com/vector-gratis/fondo-banner-abstracto-formas-rojas_1361-3348.jpg?w=1380&t=st=1663970148~exp=1663970748~hmac=1b9b55f5d0db726ba30a47f23ccac6c5b840856cb3063d7b7c0b7b684dd5e122);
+    background-image: url('../images/izqlanding.jpeg');
     background-size: cover;
     color: white;
     transition: 0.3s;
@@ -128,7 +128,7 @@ textarea {
 
 .buttonCrear:hover {
     color: white;
-    background-image: url(https://img.freepik.com/foto-gratis/fondo-banner-trazo-pincel-rojo-negro-perfecto-canva_1361-3597.jpg?w=1060&t=st=1663970232~exp=1663970832~hmac=a8dec9c2a04b284ef2b56ed59f92fee35b804f6aeac8d59fdd3950f45c48956f);
+    background-image: url('../images/izqlanding.jpeg');
     background-size: cover;
     border-color: white;
     transform: translateY(-20%);
@@ -136,7 +136,7 @@ textarea {
 
 .genreX {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-top: 15px;
     font-size: 20px;
 }
@@ -182,4 +182,56 @@ textarea {
     color: white;
     background-color: #75739E;
     border: solid 2px black;
+}
+
+.released_container {
+    margin-right: 15rem;
+    justify-content: center;
+    
+}
+
+.released {
+    margin-right: 5rem;
+    font-size: 17px;
+    color: white;
+}
+
+.rating {
+    margin-right: 5rem;
+    font-size: 17px;
+    color: white;
+}
+
+.input{
+    margin-right: 15rem;
+   /*margin-bottom: 20px;*/
+    padding: 7px;
+    margin: 17px 0px;
+    box-sizing: border-box;
+    font-size: 17px;
+    border-radius: 7px;
+    background-color: rgba(125, 120, 193, 0.57);
+}
+
+.inputss{
+    width: 50%;
+    margin-right: 15rem;;
+    padding: 7px;
+    margin: 17px 0px;
+    box-sizing: border-box;
+    font-size: 17px;
+    border-radius: 7px;
+    background-color: rgba(125, 120, 193, 0.57);
+}
+
+.platforms_container {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    justify-content: center;
+}
+
+.genres_container {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    justify-content: center;
 }
