--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -11,3 +11,9 @@
     width: 100%;
     border-radius: 1rem;
   }
+  
+.card:hover {
+  box-shadow: 5px 5px black;
+  transform: translateY(-3%);
+  box-shadow: 0 0px 16px 0 rgba(0,0,0,0.2);
+}
