--- a/client/src/components/Home/Home2.css
+++ b/client/src/components/Home/Home2.css
@@ -15,16 +15,23 @@ body {
 }
 
 .create_container {
-  margin-top: 1rem;
+  margin-top: 3rem;
   margin-left: 0rem;
   justify-content: center;
+  
 }
 
 .button_create_videogame {
   text-decoration: none;
-  color: goldenrod;
+  font-size: 30px;
+  color: rgb(72, 54, 9);
   justify-content: center;
+  padding: 20px 40px;
+  font-weight: bold;
+  font-family: 'Russo One', sans-serif;
+  
 }
+
 .reload_container {
   margin-left: 1rem;
   padding: 10px 22px;
@@ -34,8 +41,8 @@ body {
   text-decoration: none;
   color: goldenrod;
   justify-content: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 4rem;
+  margin-bottom: 0rem;
   margin-right: 0.7rem;
   cursor: pointer;
   border-radius: 0.2rem;
